fixed custom emoji in nickname. changed icons on right side to be more streamlined. adjusted CSS so that all text in header of post is on same baseline and all icons/images are middle-aligned.

--- a/static/font/css/fontello.css
+++ b/static/font/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?70327001');
-  src: url('../font/fontello.eot?70327001#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?70327001') format('woff2'),
-       url('../font/fontello.woff?70327001') format('woff'),
-       url('../font/fontello.ttf?70327001') format('truetype'),
-       url('../font/fontello.svg?70327001#fontello') format('svg');
+  src: url('../font/fontello.eot?82290981');
+  src: url('../font/fontello.eot?82290981#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?82290981') format('woff2'),
+       url('../font/fontello.woff?82290981') format('woff'),
+       url('../font/fontello.ttf?82290981') format('truetype'),
+       url('../font/fontello.svg?82290981#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?70327001#fontello') format('svg');
+    src: url('../font/fontello.svg?82290981#fontello') format('svg');
   }
 }
 */
@@ -78,6 +78,7 @@
 .icon-spin3:before { content: '\e832'; } /* '' */
 .icon-spin4:before { content: '\e834'; } /* '' */
 .icon-link-ext:before { content: '\f08e'; } /* '' */
+.icon-link-ext-alt:before { content: '\f08f'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-comment-empty:before { content: '\f0e5'; } /* '' */
